# tp-lab-6

data/: Employees.txt  Projects.txt
include/: Employee.h  Engineer.h  Factory.h  Interfaces.h  Manager.h  Personal.h  Project.h
src/: CMakeLists.txt  Employee.cpp  Employees.txt  Engineer.cpp  Factory.cpp  Manager.cpp  Personal.cpp  Project.cpp  main.cpp  tests.cpp
test/: tests.cpp
